footer markup done

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,3 +1,15 @@
+@import "shared/variables";
+@import "components/footer";
+
+
 * {
-    margin: 0;padding: 0;box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ 
+}
+
+
+body {
+  font-family: $font-poppins;
 }
