--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,21 +3,21 @@
     <div class="logo-part">
       <h3>Amazora</h3>
       <div></div>
-      <p>Gift and decoration store</p>
+      <p class="caption-1">Gift and decoration store</p>
     </div>
     <div class="footer-nav">
-      <a href="">Home</a>
-      <a href="">Shop</a>
-      <a href="">Products</a>
-      <a href="">Blog </a>
-      <a href="">Contact Us</a>
+      <a class="caption-1" href="">Home</a>
+      <a class="caption-1" href="">Shop</a>
+      <a class="caption-1" href="">Products</a>
+      <a class="caption-1" href="">Blog </a>
+      <a class="caption-1" href="">Contact Us</a>
     </div>
   </div>
   <div class="footer-bottom">
     <div class="footer-info">
       <p>Copyright © 2025 Amazora. All rights reserved</p>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
+    <div>  <a href="#">Privacy Policy</a>
+      <a href="#">Terms of Use</a></div>
     </div>
     <div class="footer-social">
       <a href="#"
