--- a/styles/scss/shared/_variables.scss
+++ b/styles/scss/shared/_variables.scss
@@ -17,4 +17,17 @@ $neutral-6: #232627;
 $neutral-7: #141718;
 $black-1 : #121212;
 
- 
+// reusalbe responsive coddes
+$tablet: 768px;
+$desktop: 1024px; 
+@mixin media($device) {
+  @if $device == tablet {
+    @media (min-width: $tablet) {
+      @content;
+    }
+  } @else if $device == desktop {
+    @media (min-width: $desktop) {
+      @content;
+    }
+  }
+}
