--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,6 +1,7 @@
 @import "shared/variables";
 @import "components/footer";
 @import "shared/typography";
+@import "components/header";
 
 * {
   margin: 0;
