--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,8 +6,8 @@
       <p class="caption-1">Gift and decoration store</p>
     </div>
     <div class="footer-nav">
-      <a class="caption-1" href="">Home</a>
-      <a class="caption-1" href="">Shop</a>
+      <a class="caption-1" href="/index.html">Home</a>
+      <a class="caption-1" href="/pages/shop.html">Shop</a>
       <a class="caption-1" href="">Products</a>
       <a class="caption-1" href="">Blog </a>
       <a class="caption-1" href="">Contact Us</a>
