--- a/templates/header.html
+++ b/templates/header.html
@@ -34,3 +34,42 @@
     </div>
   </div>
 </template>
+
+<template id="mobile-menu">
+  <div id="mobile-menu-container">
+    <div id="mobile-menu-inner">
+      <div id="mobile-menu-top">
+        <div id="mobile-menu-logo">
+          <h2>Amazora</h2>
+          <button id="menu-remover">
+            <img src="/assets/icons/menu-cross.svg" alt="" />
+          </button>
+        </div>
+        <label id="search-label" for="search">
+          <img src="/assets/icons/menu-search.svg" alt="" />
+          <input
+            class="caption-1"
+            type="text"
+            placeholder="Search"
+            name="search"
+            id="search"
+          />
+        </label>
+      </div>
+      <div id="mobile-menu-bottom">
+        <button id="sign-in-btn">Sign In</button>
+        <div id="mobile-menu-social">
+          <a href="#"
+            ><img src="/assets/icons/footer-social/facebook-dark.svg" alt=""
+          /></a>
+          <a href="#"
+            ><img src="/assets/icons/footer-social/instagram-dark.svg" alt=""
+          /></a>
+          <a href="#"
+            ><img src="/assets/icons/footer-social/youtube-dark.svg" alt=""
+          /></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</template>
