--- a/styles/scss/components/_button.scss
+++ b/styles/scss/components/_button.scss
@@ -1,5 +1,11 @@
-button { 
-    background-color: $neutral-7;
-    padding: .5rem 1.5rem;
-    color: $neutral-1;
+button {
+  background-color: $neutral-7;
+  padding: 1.5rem;
+  color: white;
+  border-radius: 0.375rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  line-height: 2rem;
 }
