auth pages mobile part done

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,9 +1,10 @@
 @import "shared/variables";
 @import "components/footer";
-@import 'components/button';
+@import "components/button";
 @import "shared/typography";
 @import "components/header";
 @import "components/mobile-header";
+@import "pages/auth";
 * {
   margin: 0;
   padding: 0;
