--- a/styles/scss/shared/_typography.scss
+++ b/styles/scss/shared/_typography.scss
@@ -6,3 +6,31 @@
   font-family: "Inter", sans-serif;
 }
 
+.caption-2 {
+  font-family: "Inter", sans-serif;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.25rem;
+}
+.heading-4 {
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2.75rem; /* 110% */
+  letter-spacing: -0.025rem;
+}
+.body-2 {
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.625rem;
+}
+h2 {
+  font-size: 1rem;
+  font-weight: 500;
+  @include media(tablet) {
+    font-size: 1.5rem;
+  }
+}
