basic state management system implemented

--- a/styles/scss/shared/_typography.scss
+++ b/styles/scss/shared/_typography.scss
@@ -34,3 +34,11 @@ h2 {
     font-size: 1.5rem;
   }
 }
+
+.button-xs {
+  font-family: Inter;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
