--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -2,6 +2,7 @@
 @import "components/footer";
 @import "components/button";
 @import "shared/typography";
+@import "components/bread-crumb";
 @import "components/header";
 @import "components/mobile-header";
 @import "pages/auth";
@@ -14,4 +15,18 @@
 
 body {
   font-family: $font-poppins;
+}
+
+
+section {
+  padding: {
+    left: 2rem;
+    right: 2rem;
+  };
+  @include media(tablet) {
+    padding: {
+      left: 10rem;
+      right: 10rem;
+    }
+  }
 }
