header account button toggle based on user auth state

--- a/templates/header.html
+++ b/templates/header.html
@@ -25,8 +25,8 @@
     <div class="menu-right">
       <button class="mobile-hidden" id="search-btn">
         <img src="/assets/icons/menu-search.svg" alt="" /></button
-      ><button class="mobile-hidden" id="account-btn">
-        <img src="/assets/icons/menu-account.svg" alt="" /></button
+      ><a href="#" class="mobile-hidden" id="account-btn">
+        <img src="/assets/icons/menu-account.svg" alt="" /></a
       ><button>
         <img src="/assets/icons/header-bag.svg" alt="bag icon" />
       </button>
