--- a/styles/scss/shared/_typography.scss
+++ b/styles/scss/shared/_typography.scss
@@ -20,6 +20,12 @@
   line-height: 2.75rem; /* 110% */
   letter-spacing: -0.025rem;
 }
+.heading-7 {
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
 .body-2 {
   font-family: "Inter", sans-serif;
   font-size: 1rem;
