--- a/styles/scss/shared/_typography.scss
+++ b/styles/scss/shared/_typography.scss
@@ -13,6 +13,14 @@
   font-weight: 600;
   line-height: 1.25rem;
 }
+.heading-1 {
+  font-family: 'Inter', sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1rem; /* 100% */
+  text-transform: uppercase;
+}
 .heading-4 {
   font-size: 2.5rem;
   font-style: normal;
