--- a/styles/scss/pages/_account.scss
+++ b/styles/scss/pages/_account.scss
@@ -13,44 +13,91 @@
     }
   }
 
-  #account-nav {
-    background-color: $neutral-2;
-    @media (min-width: $tablet) {
-      padding: {
-        top: 2.5rem;
-        bottom: 2.5rem;
-        left: 1rem;
-        right: 1rem;
+  #account-container {
+    display: flex;
+    #account-nav {
+      background-color: $neutral-2;
+      @media (min-width: $tablet) {
+        padding: {
+          top: 2.5rem;
+          bottom: 2.5rem;
+          left: 1rem;
+          right: 1rem;
+        }
+        width: 16.375rem;
       }
-      width: 16.375rem;
-    }
-    h3 {
-      padding: {
-        top: 0.5rem;
-        bottom: 0.5rem;
+      h3 {
+        padding: {
+          top: 0.5rem;
+          bottom: 0.5rem;
+        }
+        border-bottom: 1px solid $neutral-7;
+        text-align: left;
+        color: $neutral-7;
+        font-weight: 500;
       }
-      border-bottom: 1px solid $neutral-7;
-      text-align: left;
-      color: $neutral-7;
-      font-weight: 500;
+      ul {
+        margin-top: 0.75rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0.75rem;
+
+        li {
+          list-style-type: none;
+          a {
+            font-weight: 500;
+            padding: {
+              top: 0.5rem;
+              bottom: 0.5rem;
+            }
+            color: $neutral-4;
+            &:hover {
+              color: $neutral-6;
+            }
+          }
+        }
+      }
     }
-    ul {
-      margin-top: 0.75rem;
+    #account-content {
+      width: 100%;
       display: flex;
       flex-direction: column;
-      gap: 0.75rem;
+      gap: 2.5rem;
+      @media (min-width: $tablet) {
+        padding: {
+          left: 4.5rem;
+          right: 4.5rem;
+        }
+      }
+      .form-section {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        h4 {
+          font-weight: 600;
+        };
 
-      li {
-        list-style-type: none;
-        a {
-          font-weight: 500;
-          padding: {
-            top: 0.5rem;
-            bottom: 0.5rem;
+   .form-btn {
+    content: "ulta palta";
+   }
+        label {
+          
+          p {
+            color: $neutral-4;
+            margin-bottom: 0.75rem;
           }
-          color: $neutral-4;
-          &:hover {
-            color: $neutral-6;
+          input {
+            width: 100%;
+            padding: {
+              left: 1rem;
+              right: 1rem;
+              top: .25rem;
+              bottom: .25rem;
+            }
+            color: $neutral-4;
+            border: 1px solid $neutral-3;
+            border-radius: 0.375rem;
+            background-color: white;
           }
         }
       }
