--- a/styles/scss/pages/_account.scss
+++ b/styles/scss/pages/_account.scss
@@ -15,6 +15,12 @@
 
   #account-container {
     display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+    @media  (min-width: $tablet) {
+      flex-direction: row;
+      gap: none;
+    }
     #account-nav {
       background-color: $neutral-2;
       @media (min-width: $tablet) {
@@ -58,7 +64,7 @@
         }
       }
     }
-    #account-content {
+    #account-form {
       width: 100%;
       display: flex;
       flex-direction: column;
