product page data fetching and data markup is done

--- a/styles/scss/pages/_account.scss
+++ b/styles/scss/pages/_account.scss
@@ -32,6 +32,12 @@
         }
         width: 16.375rem;
       }
+
+      h2 {
+        margin-bottom: 2.5rem;
+        text-align: center;
+        color: black;
+      }
       h3 {
         padding: {
           top: 0.5rem;
