--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -10,6 +10,7 @@
 @import "pages/contact-us";
 @import "components/container";
 @import "pages/account";
+@import "pages/product";
 
 * {
   margin: 0;
