--- a/templates/account-nav.html
+++ b/templates/account-nav.html
@@ -1,5 +1,6 @@
 <template id="accont-nav">
   <div id="nav-bottom">
+    <h2 id="display-name" class="body-1">User DIsplay name</h3>
     <h3 class="body-2 ">Account</h3>
     <ul>
       <li class="body-2"><a class="body-2"  href="/pages/account/my-account.html">My Account</a></li>
