product detail info UI css part is done

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -23,6 +23,17 @@ body {
   font-family: $font-poppins;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 section {
   padding: {
     left: 2rem;
