--- a/styles/scss/pages/_product.scss
+++ b/styles/scss/pages/_product.scss
@@ -1,38 +1,167 @@
-#product { 
-
-    #product-info {
+#product {
+  #product-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3.94rem;
+    #product-images {
+      width: 100%;
+      overflow: hidden;
+      #display-image {
+        width: 100%;
+        height: 45.5625rem;
+        object-fit: contain;
+      }
+      #product-image-thumbnail-container {
         display: grid;
-        grid-template-columns: 1fr 1fr; 
-        gap: 3.94rem; 
-         #product-images { 
-            width: 100%; 
-            overflow: hidden;
-            #display-image {
-                width: 100%; 
-                height: 45.5625rem; 
-             object-fit: contain;
-            }
-            #product-image-thumbnail-container {
-                display:  grid;
-                margin-top: 1.5rem;
-                grid-template-columns: repeat(3, 1fr);
-                max-height: 10rem;
-                width: 100%;
-                gap: 1.5rem;
-                img {
-                height: 10rem;
-                 object-fit: cover;
-                width: 100%;
-                cursor: pointer;
-                }
-            }
-
-         }
-
-         #product-description{
-            width: 100%;
-            height: 100%;
-            background-color: aqua;
-         }
+        margin-top: 1.5rem;
+        grid-template-columns: repeat(3, 1fr);
+        max-height: 10rem;
+        width: 100%;
+        gap: 1.5rem;
+        img {
+          height: 10rem;
+          object-fit: cover;
+          width: 100%;
+          cursor: pointer;
+        }
+      }
     }
+
+    #product-description {
+      width: 100%;
+      height: 100%;
+
+      #review-section {
+        display: flex;
+        justify-content: flex-start;
+        gap: 0.62rem;
+        p {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-weight: 400;
+          line-height: 0.75rem;
+          gap: 0.25rem;
+        }
+      }
+      #product-title {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+      }
+      #description {
+        color: $neutral-4;
+        font-weight: 400;
+        margin-bottom: 1rem;
+      }
+      #price-container {
+        display: flex;
+        align-items: center;
+
+        #actual-price {
+          font-family: Poppins;
+          font-size: 1.25rem;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 2.125rem; /* 121.429% */
+          letter-spacing: -0.0375rem;
+          text-decoration-line: line-through;
+          color: $neutral-4;
+          padding-left: 0.25rem;
+        }
+      }
+
+      #call-to-action {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        padding: {
+          top: 2rem;
+          bottom: 2rem;
+        }
+        gap: 1rem; 
+        div {
+          width: 100%;
+          display: flex;
+          gap: 1.5rem;
+          justify-content: flex-start;
+          align-items: center;
+          height: 3.25rem; 
+          #quantity-selector {
+            background-color: $neutral-1;
+            display: flex;
+            justify-items: flex-start;
+            align-items: center;
+            gap: 1.5rem;
+            width: auto;
+
+            padding: {
+              top: 0.75rem;
+              bottom: 0.75rem;
+              left: 1rem;
+              right: 1rem;
+            }
+            input {
+              height: 100%;
+              border: none;
+              text-align: center;
+              font-family: Inter;
+              font-size: 1rem;
+              font-style: normal;
+              font-weight: 600;
+              line-height: 1.625rem;
+              max-width: 1.5rem;
+              background-color: white;
+              color: $neutral-7;
+            }
+            button {
+              border: none;
+              background-color: white;
+              color: $neutral-7;
+              padding: 0;
+            }
+          }
+          #add-to-wishlist {
+            height: 100%;
+            color: $neutral-7;
+            margin-left: auto;
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid $neutral-7;
+            background-color: white;
+            gap: 0.62rem;
+            cursor: pointer;
+          }
+        }
+        #add-to-cart {
+          min-width: 100%;
+        }
+      }
+
+      #additional-info {
+ 
+        div{
+          display: flex ;
+          margin-bottom: .5rem;
+
+          h5 {
+            width: 10rem;
+            font-weight: 400;
+            text-transform: uppercase;
+          }
+        }
+      }
+
+      .section{
+        margin-top: 1.5rem;
+         h4 {
+          color: $neutral-4;
+         }
+         h3 {
+          color: black;
+         }
+      }
+    }
+  }
 }
