--- a/styles/scss/shared/_typography.scss
+++ b/styles/scss/shared/_typography.scss
@@ -37,12 +37,24 @@
   line-height: 2.75rem; /* 110% */
   letter-spacing: -0.025rem;
 }
+
+.heading-6 {
+  font-family: "Poppins", sans-serif;
+font-size: 1.75rem;
+font-style: normal;
+font-weight: 500;
+line-height: 2.125rem; /* 121.429% */
+letter-spacing: -0.0375rem;
+}
+
 .heading-7 {
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.75rem;
 }
+
+ 
 
 .body-1 {
   font-family: Inter;
