--- a/styles/scss/pages/_product.scss
+++ b/styles/scss/pages/_product.scss
@@ -1,15 +1,25 @@
 #product {
   #product-info {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+
+    @media (min-width : $tablet) { 
+      grid-template-columns: 1fr 1fr;
+    }
     gap: 3.94rem;
     #product-images {
       width: 100%;
-      overflow: hidden;
+  
       #display-image {
         width: 100%;
-        height: 45.5625rem;
+
+        height: 25.875rem;
+    
         object-fit: contain;
+
+        @media (min-width : $tablet) {
+          height: 45.5625rem;
+        }
       }
       #product-image-thumbnail-container {
         display: grid;
