shop page banner is done

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -11,6 +11,8 @@
 @import "components/container";
 @import "pages/account";
 @import "pages/product";
+@import "pages/shop";
+
 
 * {
   margin: 0;
@@ -30,9 +32,7 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
+ 
 
 section {
   padding: {
